# tetris

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md
scripts/: format.sh  tidy.sh
src/core/: CMakeLists.txt  board.cpp  board.hpp  game.cpp  game.hpp  scoring.cpp  scoring.hpp  tetromino.cpp  tetromino.hpp  types.hpp
src/gui/: CMakeLists.txt  colors.hpp  game_widget.cpp  game_widget.hpp  main.cpp  main_window.cpp  main_window.hpp  preview_widget.cpp  preview_widget.hpp
tests/: CMakeLists.txt  test_board.cpp  test_game.cpp  test_scoring.cpp  test_tetromino.cpp  test_types.cpp
